<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="user"
            type="com.e.skiapp.model.User" />
    </data>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Contoller.fragments.Main_menu.HomeFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewGreetingsHello"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello"
                android:textSize="25sp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:id="@+id/textViewGreetingsUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/textViewGreetingsHello"
                android:textSize="25sp"
                android:layout_marginTop="50dp"
                android:layout_marginStart="5dp"
                android:text="@{user.username}" />

            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewGreetingsHello"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                card_view:cardCornerRadius="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                android:id="@+id/textViewElevators"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manage_elevators"
                android:textSize="20sp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp" />

                <TextView
                    android:id="@+id/textViewSpeech"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewElevators"
                    android:text="@string/view_usage_of_each_elevator_and_manage_their_state"
                    android:textSize="17sp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="15dp" />

                <Button
                    android:id="@+id/manageButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewSpeech"
                    android:layout_centerHorizontal="true"
                    android:backgroundTint="@color/blue"
                    android:text="@string/manage_elevators"
                    android:textColor="@color/white"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"/>

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </FrameLayout>
</layout>